# dmlsite

./: .gitignore  README.md  pyproject.toml
src/: dmlsite.sqlite3  dotenv.py  manage.py
src/dmlmain/: admin.py  forms.py  models.py  urls.py  views.py
src/dmlmain/migrations/: 0001_initial.py
src/dmlmain/templates/dmlmain/: base.html  homepage.html
src/dmlsite/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
src/staticfiles/dmlmain/css/: dmlmain.css
src/staticfiles/dmlmain/js/: dancing_stickman.js
