[project]
name = "dmlsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    # "boto3>=1.42.77",
    "channels>=4.3.2",
    # "channels-redis>=4.3.0",
    # "cherrypy>=18.10.0",
    "crispy-bootstrap5>=2026.3",
    # "daphne>=4.2.1",
    # "dj-database-url>=3.1.2", # for postgresql database
    "django>=6.0.3",
    "django-allauth>=65.15.0",
    "django-compressor>=4.6.0",
    # "django-controlcenter>=0.3.3",
    # "django-cookie-law>=2.2.0",
    "django-crispy-forms>=2.6",
    # "django-dotenv>=1.4.2",
    # "django-embed-video>=1.4.10",
    "django-emoji-picker>=0.0.6",
    "django-extensions>=4.1",
    # "django-jinja>=2.11.0",
    # "django-libsass>=0.9",
    "django-markdown-deux>=1.0.6",
    "django-pagedown>=2.2.1",
    # "django-picklefield>=3.4.0",
    # "django-pipeline>=4.1.0",
    # "django-q>=1.3.6",
    # "django-redis>=6.0.0",
    "django-registration-redux>=2.13",
    # "django-sitetree>=1.18.0",
    # "django-storages>=1.14.6",
    "django-taggit>=6.1.0",
    "django-types>=0.23.0",
    "django-user-agents>=0.4.0",
    # "django-webpack-loader>=3.2.3",
    # "djangorestframework>=3.17.1",
    # "djangorestframework-stubs>=3.16.8",
    "docutils>=0.22.4",
    "gunicorn>=25.3.0", # Gunicorn WSGI server (linux only)
    # "html5lib>=1.1",
    # "pyjwt>=2.12.1",
    # "pyopenssl>=26.0.0",
    # "pypdf2>=3.0.1",
    # "sorl-thumbnail>=13.0.0",
    "uvicorn>=0.42.0", # Uvicorn ASGI server
    "uvicorn-worker>=0.4.0",
    "whitenoise[brotli]>=6.12.0",
]

[dependency-groups]
dev = [
    # "django-sslserver>=0.22",
    "mypy>=1.19.1",
    "django-stubs-ext>=6.0.2",
    "django-stubs[compatible-mypy]>=6.0.2",
    # "pytest-cov>=7.1.0",
    # "pytest-django>=4.12.0",
    # "pytest-mypy>=1.0.1",
    # "pytest-sugar>=1.1.1",
    # "pytest-xdist>=3.8.0",
    "ruff>=0.15.9",
]

[tool.mypy]
mypy_path = "./.venv/bin/mypy"
python_version = "3.14.2"
strict = true
follow_untyped_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
# django_settings_module = "myproject.settings"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "W",    # pycodestyle warnings 
    "I",    # isort
    "UP",   # pyupgrade
    "C90",  # McCabe
    "N",    # pep8-naming
    "PERF", # perflint

    "F",   # Pyflakes ie. flake8
    "A",   # flake8-builtins  
    "B",   # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "FA",  # flake8-future-annotations    
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking

    "LOG", # Checks for issues using the standard library logging module.
    "G",   # Better usage of built-in logging
    "PYI", # Linting rules for type annotations.
    "Q",   # Linting rules for quotes
    "RUF", # Ruff lint shows problems Ruff will fix

    "DJ", # Ruff django specific rules  
]

ignore = [
    "TC006", # quote typehints in cast()
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.uv.workspace]
members = [
    "src",
]

